...
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".locationreminders.reminderslist.ReminderListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addReminderFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/ic_add"
                app:fabSize="normal"
                app:layout_anchor="@id/reminderssRecyclerView"
...
